# pyrilo

./: .gitignore  .gitlab-ci.yml  Make  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
gams5-client/: GAMS5APIClient.py  Pyrilo.py  main.py
gams5-client/api/: DigitalObjectService.py
gams5-client/extract/: GMLSIP.py  SIP.py  SIPMetadata.py
gams5-client/ingest/: ContentModels.py  DigitalObjectService.py  GMLSIP.py  IntegrationService.py  SIP.py  SIPFileMetadata.py  SIPMetadata.py  SubInfoPackService.py  TEISIP.py
gams5-client/package/: BagService.py  SIPBagitTransformerService.py
gams5-client/processing/: DerlaDataProcessor.py
gams5-client/refine/: DerlaDataProcessor.py  DerlaDataRefiner.py
gams5-client/service/: BagService.py  DigitalObjectService.py  IntegrationService.py  SIPBagitTransformerService.py  SubInfoPackService.py
gams5-client/statics/: GAMS5APIStatics.py
gams5-client/utils/: xml_operations.py
ingest/: README.md
logs/: readme.md
project/: README.md
project/bags/: README.MD
project/sips/: README.md
pyrilo/: Pyrilo.py  PyriloStatics.py  main.py
pyrilo/api/: DigitalObject.py  DigitalObjectService.py  IngestService.py  IntegrationService.py  ProjectService.py
pyrilo/auth/: AuthCookie.py  AuthorizationService.py
pyrilo/extract/: GAMSXMLNamespaces.py  GMLSIP.py  SIP.py  SIPFileMetadata.py  SIPMetadata.py  SIPService.py  SubInfoPackService.py  TEISIP.py  XMLSIP.py
pyrilo/package/: BagService.py  SIPBagitTransformerService.py
pyrilo/refine/: DerlaDataRefiner.py  DerlaSIPRefiner.py  SIPRefiner.py
pyrilo/validate/: readme.md
scripts/: fasttext_scale_down.py  readme.md  transform.py
src/pyrilo/: Pyrilo.py  PyriloStatics.py  __init__.py  cli.py  exceptions.py  main.py
tests/: conftest.py  pytest.ini
tests/integration/: test_cli_errors.py  test_cli_ingest.py  test_cli_project.py  test_cli_sync.py
tests/unit/: test_filesystem_service.py  test_gams_api_client.py  (+1 more)
(+63 files in other folders)
