[project]
name = "pyrilo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sebastian Schiller-Stoff", email = "sebastian.stoff@uni-graz.at" }
]
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.4"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyrilo"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "requests-mock>=1.12.1",
    "ruff>=0.14.14",
]

[project.scripts]
pyrilo = "pyrilo.cli:cli"
